--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
         <img src="images/download.png" alt="Download">
       </a>
       <a href="about.html">
-        <img src="images/turtle_team.webp" alt="AboutTurtleTeam">
+        <img src="images/volia_organics.webp" alt="AboutVoliaOrganics">
       </a>
     </div>
 
     <p id="description">
-      Сайт посвящается самому удачному форк-проекту от команды Turtle Team на основе Simple Sandbox:Reborn, который представляет собой ремейк песочницы Simple Sandbox:Classic
-      с внедрёнными нововведениями. Наш проект всё больше и больше отдаляется от предка тем, что мы исправляем ошибки старого недо-разработчика (Боба) и выводим проект на новый уровень.
+      Сайт посвящается правой ветви проекта ESB от VoliaOrganics на основе Ekrapina Sandbox, который представляет собой форк-ремейк песочницы Simple Sandbox:Classic
+      с внедрёнными нововведениями. Отличае правой ветви, не только в другом подходе к тем или иным идеям, но и ещё опенсорсностью проекта.
     </p>
 
     <div class="telegram-link">
@@ -159,6 +159,7 @@
 
 </body>
 </html>
+
 
 
 
