--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   <div class="content">
     <figure>
       <img src="images/ssbrricon.png" alt="Логотип SSB:RR">
-      <figcaption id="caption">Загрузить APK файл, и больше о Volia Organics.</figcaption>
+      <figcaption id="caption">Загрузка файлов, и больше о Volia Organics.</figcaption>
     </figure>
 
     <div class="buttons">
@@ -110,7 +110,7 @@
 
     <div class="telegram-link">
       <img src="images/telegram.png" alt="Telegram">
-      <a id="telegram-text" href="https://t.me/Ekrapina_Sandbox" target="_blank">— Ekrapina Sandbox Telegram</a>
+      <a id="telegram-text" href="https://t.me/Ekrapina_Sandbox" target="_blank">— ESB:RB Telegram</a>
     </div>
   </div>
 
@@ -120,10 +120,10 @@
     const text = {
       ru: {
         title: "Официальный сайт Правой ветви Ekrapina Sandbox",
-        caption: "Загрузить APK файл, и больше о Turtle Team.",
+        caption: "Загрузка файлов, и больше о Volia Organics.",
         description:
           "Сайт посвящается правой ветви проекта ESB от VoliaOrganics на основе Ekrapina Sandbox, который представляет собой форк-ремейк песочницы Simple Sandbox:Classic с внедрёнными нововведениями. Отличае правой ветви, не только в другом подходе к тем или иным идеям, но и ещё опенсорсностью проекта.",
-        telegram: "— Ekrapina Sandbox Telegram",
+        telegram: "— ESB:RB Telegram",
         flag: "images/flag_ru.png",
         alt: "Русский",
       },
@@ -159,6 +159,7 @@
 
 </body>
 </html>
+
 
 
 
