--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         caption: "Download files and learn more about Volia Organics.",
         description:
           "This website is dedicated to the right branch of VoliaOrganics' ESB project, based on Ekrapina Sandbox, which is a forked remake of the Simple Sandbox:Classic sandbox with some new features. The right branch differs not only in its different approach to certain ideas, but also in the open-source nature of the project.",
-        telegram: "— ESB:RB Telegram"",
+        telegram: "— ESB:RB Telegram",
         flag: "images/flag_us.png",
         alt: "English",
       },
@@ -159,6 +159,7 @@
 
 </body>
 </html>
+
 
 
 
