--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <img src="images/download.png" alt="Download">
       </a>
       <a href="about.html">
-        <img src="images/volia_organics.webp" alt="AboutVoliaOrganics">
+        <img src="images/turtle_team.webp" alt="AboutVoliaOrganics">
       </a>
     </div>
 
@@ -159,6 +159,7 @@
 
 </body>
 </html>
+
 
 
 
