--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
     <div class="telegram-link">
       <img src="images/telegram.png" alt="Telegram">
-      <a id="telegram-text" href="https://t.me/Ekrapina_Sandbox" target="_blank">— ESB:RB Telegram</a>
+      <a id="telegram-text" href="https://t.me/Ekrapina_Sandbox_Right_Branch" target="_blank">— ESB:RB Telegram</a>
     </div>
   </div>
 
@@ -159,6 +159,7 @@
 
 </body>
 </html>
+
 
 
 
