--- a/download.html
+++ b/download.html
@@ -73,9 +73,10 @@ tr:hover { background: #f1f1f1; }
   vertical-align: middle;
 }
 
+/* Изменение цвета кнопки загрузки */
 .download-btn {
   padding: 5px 0;
-  background: DodgerBlue;
+  background: DarkBlue; /* Новый цвет для кнопки */
   color: white;
   text-decoration: none;
   border-radius: 4px;
@@ -83,15 +84,9 @@ tr:hover { background: #f1f1f1; }
   width: 100%;
   text-align: center;
 }
-.download-btn:hover { background: RoyalBlue; }
+.download-btn:hover { background: #003366; } /* Более темный оттенок синего при наведении */
 
-.drive-text {
-  text-align: center;
-  margin-top: 15px;
-  font-weight: bold;
-  color: #333;
-}
-
+/* Изменение цвета кнопки Google Drive */
 .drive-btn {
   display: flex;
   align-items: center;
@@ -99,7 +94,7 @@ tr:hover { background: #f1f1f1; }
   gap: 10px;
   width: 320px;
   margin: 10px auto 25px;
-  background: #1E90FF;
+  background: DarkBlue; /* Новый цвет для кнопки Google Drive */
   color: white;
   text-decoration: none;
   text-align: center;
@@ -110,7 +105,7 @@ tr:hover { background: #f1f1f1; }
   transition: background 0.3s, transform 0.2s;
 }
 .drive-btn:hover {
-  background: #187bcd;
+  background: #003366; /* Более темный оттенок синего при наведении */
   transform: translateY(-1px);
 }
 .drive-btn img {
@@ -275,9 +270,3 @@ applyLanguage();
 
 </body>
 </html>
-
-
-
-
-
-
