--- a/download.html
+++ b/download.html
@@ -115,6 +115,14 @@ tr:hover { background: #f1f1f1; }
   display: block;
 }
 
+/* Исправление выравнивания текста "Не нашли то что искали?" */
+.drive-text {
+  text-align: center; /* Выравнивание по центру */
+  margin-top: 15px;
+  font-weight: bold;
+  color: #333;
+}
+
 /* Мобильная адаптация */
 @media (max-width: 600px) {
   table, thead, tbody, th, td, tr { display: block; width: 100%; }
