--- a/about.html
+++ b/about.html
@@ -127,7 +127,7 @@ const translations = {
   },
   en: {
     h1: "What is the right branch, and why did the project diverge from the main direction?",
-    p1: "What is SSB:RR, and why did we abandon the old name?",
+    p1: "The history of the project's development from the very beginning to this time.",
     p2: "Simple Sandbox: Reborn Reloaded is a fork continuation of the Simple Sandbox: Reborn project, which was developed from September 17, 2024 to June 26, 2025, and later was abandoned by the author for obvious reasons: first, his parents wanted to take the laptop, second, he got tired. Later this developer released all the source code. However, not everything is so rosy, entering uncle's house... We were just shocked by the renovation there\"))))",
     p3: "And already on July 19, 2024, we began to put our own things in order. Oh, and we have seen bugs and solutions made by some autistic person... We had to redo more than one system for stable gameplay. Nevertheless, unlike the predecessor, game development continues at full speed.",
     p4: "A few words about Simple Sandbox: Classic — we do not claim copyright, we were just inspired by the idea of remaking the classic version, since it had its own atmosphere. The game is just a continuation of the fan remake that was abandoned. We are not part of Madness Games and we respect their work.",
@@ -168,6 +168,7 @@ applyLanguage();
 
 </body>
 </html>
+
 
 
 
