--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <a href="about.html">
         <img src="images/volia_organics.webp" alt="AboutVoliaOrganics">
       </a>
-      <a href="https://example.com" target="_blank">
+      <a href="https://turtleteam-ekrapina-sandbox.github.io/" target="_blank">
         <img src="images/esbweb.png" alt="ESBweb">
       </a>
     </div>
@@ -162,3 +162,4 @@
 
 </body>
 </html>
+
